Always use padding to avoid header/content, footer/content overlap.
Not sure why was keyed off of certain screen size previously?

--- a/bootstraped/templates/main.css
+++ b/bootstraped/templates/main.css
@@ -1,10 +1,7 @@
 
-@media (min-width: 980px) {
-	#content {
-		padding-top: 60px;
-		padding-bottom: 40px;
-	}
-	
+#content {
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
 
 .label {
